--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,3 +1,8 @@
-
-    <h1>Halaman About</h1>
+<div class="row">
+  <div class="col text-center">
+    <img class="img-thumbnail rounded-circle" width="200px" src="img/boring-man.jpg" alt="Dzakwan Irfan Ramdhani">
+    <h1 class="display4">Dzakwan Irfan Ramdhani</h1>
+    <p class="lead">Dreamer | Full Stack Developer</p>
+  </div>
+</div>
 
